<resources>
    <string name="app_name">Port Watcher</string>

    <string name="banner_ad_unit_id">ca-app-pub-2377201727291572/6272438209</string>

    <!--Error messages-->
    <string name="network_not_available">Network not available</string>

    <!--Content Provider-->
    <string name="content_authority">net.alexandroid.network.portwatcher</string>

    <!--SnackBar-->
    <string name="clear_history">Clear history?</string>
    <string name="clear">Clear</string>

    <!--MainActivity # MainFragment (History)-->
    <string name="host2">HOST:</string>
    <string name="ports">PORTS:</string>
    <string name="when">WHEN:</string>
    <string name="desc_add_to_watchlist">Add to watchlist</string>
    <string name="desc_share_scan_result">Share scan result</string>
    <string name="history_is_empty">History is empty</string>

    <string name="share1">"HOST: "</string>
    <string name="share2">"\nOpen ports: "</string>
    <string name="share3">"\nScanned ports: "</string>
    <string name="share4">\n\nScanned with Port Watcher App.</string>

    <string name="added_ro_watchlist">Added to watchlist</string>

    <!--MainActivity menu-->
    <string name="action_settings">Settings</string>
    <string name="hint_search_view">google.com/10.0.0.1</string>

    <!--Navigation menu-->
    <string name="desc_app_icon">App icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="edit">Edit</string>
    <string name="watchlist">Watchlist</string>
    <string name="schedule">Schedule</string>
    <string name="other">Other</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>

    <string name="rate_url">market://details?id=</string>
    <string name="share_app_msg">Check out Port Watcher. Scan ports and more…</string>
    <string name="share_url" translatable="false">https://play.google.com/store/apps/details?id=</string>

    <!--MainActivity # ScanFragment-->
    <string name="host">HOST:</string>
    <string name="ping">PING:</string>
    <string name="success">Success</string>
    <string name="ping_again">Ping Again</string>
    <string name="fail">Fail</string>
    <string name="hint_port">Custom ports (ex: 80, 100–200)</string>
    <string name="enter_custom_ports">Enter custom ports or click on predefined buttons</string>
    <string name="btn_scan">scan</string>


    <!--ResultActivity - Dialog-->
    <string name="desc_exit_dialog">Exit dialog</string>
    <string name="rescan">Rescan</string>
    <string name="ok">OK</string>
    <string name="rescan2">Rescan…</string>

    <!--Notification-->
    <string name="scan_results">Scan results:</string>
    <string name="open">"Open: "</string>
    <string name="closed">"\n Closed: "</string>

    <!--MainActivity # WatchFragment-->
    <string name="wathclist_is_empty">Watchlist is empty</string>
    <string name="scanning">Scanning…</string>

    <string name="add_new">Add new</string>
    <string name="edit2">Edit</string>

    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="saved">Saved</string>
    <string name="wrong_params">Wrong parameters</string>

    <!--MainActivity # EditFragment-->
    <string name="no_buttons">No buttons</string>
    <string name="title">TITLE:</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="title2">Title</string>
    <string name="added">Added</string>

    <!--MainActivity # ScheduleFragment-->
    <string name="schedule_list_is_empty">Schedule list is empty</string>
    <string name="interval">INTERVAL:</string>
    <string name="interval2">Interval</string>

    <!--Widget-->
    <string name="add_widget">Add widget</string>

    <!--Widget keys-->
    <string name="key_count_widgets">countWidgets</string>
    <string name="key_widget_title">widgetTitle_</string>
    <string name="key_widget_host">widgetHost_</string>
    <string name="key_widget_ports">widgetPorts_</string>


</resources>
