<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/scan"/>
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/edit"/>
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/watchlist"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/schedule"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/rate_us"/>
        </menu>
    </item>

</menu>
