<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tool="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ports"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when"
            android:textAppearance="?attr/textAppearanceListItem"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@+id/labels"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        tool:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/tvIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            tool:text="192.168.0.1"/>

        <TextView
            android:id="@+id/tvPorts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            tool:text="80"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/tvWhen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            tool:text="25/02/1987 19:00"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/imgStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_add_to_watchlist"
            android:src="@drawable/ic_menu_star"
            android:paddingRight="16dp"
            android:paddingBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="10dp"
            android:paddingLeft="16dp"/>

        <ImageView
            android:id="@+id/imgShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_share_scan_result"
            android:src="@drawable/ic_menu_share"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"/>

    </LinearLayout>


</RelativeLayout>
