<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tool="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="0dp"
                android:paddingStart="16dp">


    <TextView
        android:id="@+id/titleHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/host2"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"/>


    <TextView
        android:id="@+id/titlePorts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleHost"
        android:layout_marginTop="8dp"
        android:text="@string/ports"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/titleInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlePorts"
        android:layout_marginTop="8dp"
        android:text="@string/interval"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/secondary_text"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tvPorts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/titlePorts"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@id/titleInterval"
        android:textAppearance="?attr/textAppearanceListItem"
        tool:text="80"/>

    <TextView
        android:id="@+id/tvInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/titleInterval"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@id/titleInterval"
        android:textAppearance="?attr/textAppearanceListItem"
        tool:text="Every 5 minutes"/>


    <TextView
        android:id="@+id/tvIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/titleHost"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@id/titleInterval"
        android:textAppearance="?attr/textAppearanceListItem"
        tool:text="192.168.0.1"/>


    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:checked="true"
        android:gravity="center"/>


</RelativeLayout>
